Delete Gatling configuration section
Removed Gatling configuration from build.gradle.