@@ -28,15 +28,6 @@ repositories {
     mavenCentral()
 }
 
-
-
-gatling {
-    gatlingVersion '3.15.0'
-    scalaVersion '2.13.11'
-    jvmArgs = ['-Xms2048m', '-Xmx4096m']
-    jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
-}
-
 sourceSets {
     gatling {
         scala {
